# RAG-in-a-box

./: .gitignore  README.md  pyproject.toml
src/rag_in_a_box/: common_utils.py  interface.py  llm_connectors.py  main.py
src/rag_in_a_box/connectors/: chroma_connector.py  marqo_connector.py
src/rag_in_a_box/db_connectors/: chroma_connector.py
src/rag_in_a_box/loaders/: markdown_loader.py  pdf_loader.py
