[project]
name = "rag-in-a-box"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ParthSareen", email = "psareen@uwaterloo.ca" }
]
dependencies = [
    "openai>=1.47.1",
    "ollama>=0.3.3",
    "pypdf2>=3.0.1",
    "pypdf>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_in_a_box"]
